--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
+		"dev:ssd": "node esbuild.config.mjs dev_ssd",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"build:nas": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production nas",
+		"build:ssd": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production ssd",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
